src/assets/styles/style.css
/* ... */
.theme-switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  transition: 0.6s;
  border-radius: 34px;
}

.slider:before {
  position: absolute;
  content: '';
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  transition: 0.6s;
  border-radius: 50%;
}

input:checked+.slider {
  background-color: #3b3a3a;
}

input:focus+.slider {
  box-shadow: 0 0 1px #3b3a3a;
}

input:checked+.slider:before {
  transform: translateX(26px);
}

/* Landing */
.landing {
  display: flex;
  justify-content: center;
  height: 100vh;
  max-width: 1000px;
}

.landing img {
  max-width: 100%;
  height: auto;
  display: block;
}

.landing__header>h1 {
  font-size: 5rem;
  font-weight: 900;
  margin-bottom: 0.5em;
}

.landing__header>h2 {
  font-size: 2em;
  font-weight: 900;
}

.landing,
.about {
  gap: 2em;
  padding: 2em 0;
}

/* About */
.about {
  max-width: 600px;
}

.bio-desc {
  font-family: var(--poppins);
  display: flex;
  flex-direction: column;
}

.bio-desc p {
  line-height: 28px;
}

.bio-img {
  display: flex;
  justify-content: center;
}

/* Projects */
.projects {
  width: 100%;
  max-width: 800px;
}

.projects,
.resume,
.contact,
.about {
  height: 100vh;
}

.project-card {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 1.5em;
}

.project-card__img {
  max-width: 500px;
}

.project-card__details-container {
  max-width: 500px;

  display: flex;
  flex-direction: column;
  justify-content: space-between;
  flex: 1;
}

.project-card__header-container {
  display: flex;
  gap: 1em;
  align-items: center;
}

.live,
.github {
  width: 75px;
}

.btn-container {
  display: flex;
  justify-content: center;
  gap: 2em;
}

.title {
  font-size: 1.25em;
  font-weight: 600;
}

.description {
  font-family: var(--poppins);
  font-size: 0.9em;
  font-weight: 400;
  line-height: 1.25;
}

.alice-carousel__prev-btn [data-area]:after,
.alice-carousel__next-btn [data-area]:after {
  font-size: 1.5em;
}

.react-tabs__tab-list {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.tab-panel {
  transition: opacity 1s ease-in-out;
  opacity: 0;
}

.react-tabs__tab-panel--selected {
  opacity: 1;
}

/* Resume section */
.resume__container {
  max-width: 800px;
}

.vertical-timeline-element-date {
  margin-left: 10px;
  margin-right: 10px;
}

/* Contact section  */
.contact {
  width: 100%;
  padding: 2em 0;
  max-width: 600px;
}

.contact h2 {
  margin-bottom: 1.5em;
  font-size: 2.5em;
}

.contact form {
  width: 100%;
  max-width: 800px;

  display: flex;
  flex-direction: column;
  gap: 1em;
}

textarea {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  padding: 0.5rem;
  border: 1px solid #ccc;
}

input,
textarea,
button {
  font-family: inherit;
  padding: 0.9em;
  border: none;
  border-radius: 3px;
  font-size: 1em;
  outline: none;
  transition: box-shadow 0.3s, transform 0.3s;
}

input:focus,
textarea:focus {
  box-shadow: 0 0 10px rgba(116, 123, 255, 0.5);
  transform: translateY(-3px);
}

/* Project and send buttons */
.live,
.github,
.send {
  display: flex;
  justify-content: center;
  align-items: flex-end;
  gap: 0.5em;

  color: #ffffff;
  background-color: var(--pop-green);
  border: 3px solid var(--light);
  border-radius: 5px;
  cursor: pointer;
  width: 100%;

  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
}

/* To top button */
.top-to-btm {
  position: relative;
}

.icon-position {
  position: fixed;
  bottom: 40px;
  right: 25px;
  z-index: 20;
}

.icon-style {
  background-color: var(--pop-green);
  border: 2px solid #fff;
  border-radius: 50%;
  height: 40px;
  width: 40px;
  color: #fff;
  cursor: pointer;
  animation: movebtn 3s ease-in-out infinite;
  transition: all 0.5s ease-in-out;
}

.icon-style:hover {
  animation: none;
  background: #fff;
  color: var(--pop-green);
  border: 2px solid var(--pop-green);
}

.icon-style.light {
  border: 2px solid var(--footer-dark);
}

.icon-style.light:hover {
  animation: none;
  background: var(--footer-dark);
  color: var(--pop-green);
  border: 2px solid var(--pop-green);
}

@keyframes movebtn {
  0% {
    transform: translateY(0px);
  }

  25% {
    transform: translateY(20px);
  }

  50% {
    transform: translateY(0px);
  }

  75% {
    transform: translateY(-20px);
  }

  100% {
    transform: translateY(0px);
  }
}

.footer {
  margin-top: 1rem;
  background-color: var(--dark);
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  opacity: 0.7;

  display: flex;
  justify-content: center;
  align-items: center;
  gap: 2.25em;
}

/* Contact icons in footer */
.footer__link {
  color: #ffffff;
  text-decoration: none;
  font-size: 1.5em;
}

@keyframes rotate {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

.react-logo,
.react-logo-light {
  animation: rotate 4s linear infinite;
}

.react-logo,
.font-logo {
  cursor: pointer;
  width: 1em;
  margin: 0 0.5em;
}

/* Dark/Light Themes */
body.dark {
  background-color: var(--dark);
  color: var(--white);
}

body.light {
  background-color: var(--white);
  color: var(--dark);
}

.navbar.light,
.footer.light {
  background-color: var(--transparent-light);
}

.btn.light {
  border: 3px solid var(--dark);
  transition: background-color 0.5s ease-in-out;
}

.nav-link.light {
  color: var(--dark);
}

.nav-link.light:hover {
  border-bottom: 2px solid rgba(59, 58, 58, 0.87);
}

.nav-link.light.active {
  border-bottom: 2px solid rgba(38, 38, 38, 0.87);
}

.page-header-dark::before,
.page-header-dark::after {
  border-bottom: 1px solid #eff2f4;
}

.page-header-light::before,
.page-header-light::after {
  border-bottom: 1px solid black;
}

.resume__img {
  max-width: 100%;
  max-height: 100%;
  image-rendering: -webkit-optimize-contrast;
  image-rendering: high-quality;
}
/* ... */

